gitops/network-policy/platform-services-controlled-deny-by-default.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: platform-services-controlled-deny-by-default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
